blog and some minor updates

--- a/src/errors/500.htm
+++ b/src/errors/500.htm
@@ -1,3 +1,11 @@
-<p>Server Error (500)</p>
+<p>Critical Server Error (500)
+
+<br>
+<br>
+The server has failed to parse the request given to it, therefore it cannot pull the route from the server.
+<br>
+  <br>
+  This is not supposed to happen, please immediately contact hod@tsscac.gq
+</p>
 
 <!-- the page that shows when there is an internal server error (EX: incorrectly formed route) -->
