--- a/src/errors/500.htm
+++ b/src/errors/500.htm
@@ -5,7 +5,9 @@
 The server has failed to parse the request given to it, therefore it cannot pull the route from the server.
 <br>
   <br>
-  This is not supposed to happen, please immediately contact hod@tsscac.gq
+  This is not supposed to happen, please immediately contact hod#2311 on discord for fastest response or contact hod@hodss.xyz for slower response.
+<br>
+  <br>
+  Error ID: 500:001
 </p>
 
-<!-- the page that shows when there is an internal server error (EX: incorrectly formed route) -->
